add release deployed link

--- a/release-page.html
+++ b/release-page.html
@@ -26,6 +26,7 @@
                       <small class="text-muted">09/03/2022</small>
                     </div>
                     <p class="mb-1">Chứa các tài liệu của đề tài</p>
+                    
                   </a>
                   <div class="list-group-item list-group-item-action">
                     <div class="d-flex w-100 justify-content-between">
@@ -40,6 +41,9 @@
                     </p>
                     <p class="mb-1">
                       Github: <a href="https://github.com/TrongHoang21/KhoaLuan_SubWeb">repositories</a>
+                    </p>
+                    <p class="mb-1">
+                      Release Page: <a href="https://khoaluan-subweb-hoang.netlify.app/release-page">link</a>
                     </p>
                   </div>
                 </div>
