add database sketch

--- a/release-page.html
+++ b/release-page.html
@@ -92,10 +92,12 @@
                       + gọi tới backend để speechrecognition, trả về cho frontend sử dụng<br/>
                       <br/>
                       Sau MVP, hoàn thiện tài liệu Architechture, và làm việc theo độ ưu tiên + Viết đề cương<br/>
-                   
-                      
                     </p>
 
+                    <p class="mb-1">
+                      - Giải bài toán lưu trữ :
+                      <a href="https://drive.google.com/file/d/10I6LgtqdECb7BqUs-ZseAXZH6MqO9xUA/view?usp=sharing">Database & Storage Design Sketch 06/03/2022</a>
+                    </p>
                   </div>
                   <!-- end week 3 + 4 -->
 
