--- a/release-page.html
+++ b/release-page.html
@@ -34,10 +34,15 @@
                       <small class="text-muted">12/08/2021</small>
                     </div>
                   
-                    <p class="mb-1">Product backlog: <a href="https://docs.google.com/spreadsheets/d/12mSrTevNbI0NVFvYiIyzg5bkSOJvKw2S/edit?usp=sharing&ouid=110803152508459457032&rtpof=true&sd=true">tại
+                    <p class="mb-1">Product backlog: <a href=" https://docs.google.com/spreadsheets/d/1kzGWYNdjZFanBQIj6jrZdsC4REOv7x-Y/edit?usp=sharing&ouid=110803152508459457032&rtpof=true&sd=true">tại
                         đây</a>
                     </p>
-                    <p class="mb-1">Trello: <a href="https://trello.com/b/M0QQ5gkh/kh%C3%B3a-lu%E1%BA%ADn">SubWeb</a>
+                    <p class="mb-1">Trello: <br/>
+                      <a href="https://trello.com/b/B4EWdgwO/kh%C3%B3a-lu%E1%BA%ADn-product">Trang Product</a>
+                      <a href="https://trello.com/b/V2gQZhqB/kh%C3%B3a-lu%E1%BA%ADn-project-management">Trang Project Management</a>
+
+
+
                     </p>
                     <p class="mb-1">
                       Github: <a href="https://github.com/TrongHoang21/KhoaLuan_SubWeb">repositories</a>
@@ -67,6 +72,27 @@
             <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingThree">
               <div class="accordion-body">
                 <div class="list-group">
+
+                    <!-- week ...  -->
+                    <div class="list-group-item list-group-item-action">
+                      <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">Tuần 7</h5>
+                        <small class="text-muted">16/03/2022 - 22/03/2022</small>
+                      </div>
+  
+                      <p class="mb-1">
+  
+                      <p class="mb-1">
+                        - Đề cương khóa luận:
+                        <a href="https://drive.google.com/file/d/1SaPzOo-1Duj54CO1R5QyTAZZI3Fdwy8Z/view?usp=sharing">PDF</a>
+                        - Cập nhật lại Product Backlog, Trello
+                      </p>
+  
+                      <p class="mb-1">
+                        - Giải bài toán lưu trữ :
+                        <a href="https://drive.google.com/file/d/10I6LgtqdECb7BqUs-ZseAXZH6MqO9xUA/view?usp=sharing">Database & Storage Design Sketch 06/03/2022</a>
+                      </p>
+                    </div>
 
                   <!-- week 5 + 6  -->
                   <div class="list-group-item list-group-item-action">
