--- a/release-page.html
+++ b/release-page.html
@@ -77,6 +77,48 @@
                     <!-- week ...  -->
                     <div class="list-group-item list-group-item-action">
                       <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">Tuần 11</h5>
+                        <small class="text-muted">13/04/2022 - 19/04/2022</small>
+                      </div>
+  
+                      <p class="mb-1">
+  
+                      <p class="mb-1">
+                        - Truy cập vào trang chủ để Upload video
+                        <a href="https://github.com/TrongHoang21/khoaluan3-uifirst">Github</a>
+                        
+                      </p>
+  
+                      <p class="mb-1">
+                        - Upload video vào trang edit
+                        <a href="https://github.com/TrongHoang21/khoaluan3-uifirst">Github</a>
+                      </p>
+                    </div>                  
+
+                    <!-- week ...  -->
+                    <div class="list-group-item list-group-item-action">
+                      <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">Tuần 10</h5>
+                        <small class="text-muted">06/04/2022 - 12/04/2022</small>
+                      </div>
+  
+                      <p class="mb-1">
+  
+                      <p class="mb-1">
+                        - Chương 1 khóa luận
+                        <a href="https://drive.google.com/file/d/1GZCd8IgAIxK246HJs9TdV6GnQ1KC-qo5/view?usp=sharing">PDF</a>
+                        
+                      </p>
+  
+                      <p class="mb-1">
+                        - Prototype dựng bằng code
+                        <a href="https://github.com/TrongHoang21/khoaluan3-uifirst">Github</a>
+                      </p>
+                    </div>
+
+                    <!-- week ...  -->
+                    <div class="list-group-item list-group-item-action">
+                      <div class="d-flex w-100 justify-content-between">
                         <h5 class="mb-1">Tuần 7</h5>
                         <small class="text-muted">16/03/2022 - 22/03/2022</small>
                       </div>
