--- a/release-page.html
+++ b/release-page.html
@@ -75,6 +75,22 @@
                 <div class="list-group">
 
 
+                  <!-- week ...  -->
+                  <div class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Tuần 18</h5>
+                      <small class="text-muted">26/05/2022 - 01/06/2022</small>
+                    </div>
+
+                    <p class="mb-1">
+
+                    <p class="mb-1">
+                      - Cho phép người quản trị quản lý người đăng ký sử dụng dịch vụ. (admin page) + SIGNURL
+                    </p>
+      
+
+                  </div> 
+
                         <!-- week ...  -->
                         <div class="list-group-item list-group-item-action">
                           <div class="d-flex w-100 justify-content-between">
