--- a/release-page.html
+++ b/release-page.html
@@ -78,6 +78,28 @@
                   <!-- week ...  -->
                   <div class="list-group-item list-group-item-action">
                     <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Tuần 19</h5>
+                      <small class="text-muted">02/06/2022 - 08/06/2022</small>
+                    </div>
+
+                    <p class="mb-1">
+
+                    <p class="mb-1">
+                      - Chương 3 khóa luận
+                    </p>
+                    <p class="mb-1">
+                      - Chương 4 khóa luận
+                    </p>
+                    <p class="mb-1">
+                      - Chương 5 khóa luận
+                    </p>
+      
+
+                  </div> 
+
+                  <!-- week ...  -->
+                  <div class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between">
                       <h5 class="mb-1">Tuần 18</h5>
                       <small class="text-muted">26/05/2022 - 01/06/2022</small>
                     </div>
