--- a/release-page.html
+++ b/release-page.html
@@ -85,6 +85,9 @@
                     <p class="mb-1">
 
                     <p class="mb-1">
+                      - Chương 2 khóa luận
+                    </p>
+                    <p class="mb-1">
                       - Chương 3 khóa luận
                     </p>
                     <p class="mb-1">
