--- a/release-page.html
+++ b/release-page.html
@@ -74,6 +74,49 @@
               <div class="accordion-body">
                 <div class="list-group">
 
+                  <!-- week 20  -->
+                  <div class="list-group-item list-group-item-action">
+                    <div class="d-flex w-100 justify-content-between">
+                      <h5 class="mb-1">Tuần 20</h5>
+                      <small class="text-muted">09/06/2022 - 15/06/2022</small>
+                    </div>
+
+               
+
+                    <p class="mb-1">
+                      Link CD ngày 15.06.2022: <a href="https://drive.google.com/drive/folders/1PZM_Wlvy-HirXEod8YiKKqxTvKN6s2_u?usp=sharing">Tại đây</a>
+                    </p>
+
+                    <p class="mb-1">
+                      - Khóa luận
+                    </p>
+                    <p class="mb-1">
+                      - CheckList
+                    </p>
+                    <p class="mb-1">
+                      - HUONG DAN TAO VA TRIEN KHAI TRANG RELEASE
+                    </p>
+                    <p class="mb-1">
+                      - TAI LIEU HUONG DAN CAI DAT VA BIEN DICH MA NGUON
+                    </p>
+                    <p class="mb-1">
+                      - TAI LIEU HUONG DAN CAI DAT VA SU DUNG PHAN MEM
+                    </p>
+                    <p class="mb-1">
+                      - VIDEO DEMO.mp4
+                    </p>
+                    <p class="mb-1">
+                      - Slide.pptx
+                    </p>
+                    <p class="mb-1">
+                      - readme.txt
+                    </p>
+
+
+                  </div> 
+
+
+                
 
                   <!-- week ...  -->
                   <div class="list-group-item list-group-item-action">
